--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+===== 2.6.31  ===
+2017-11-03
+    * replace functions deprecated in PHP 7.2
+
+
 2016-09-11  Uwe Tews
     * {math} fix parameter checking order to avoid misleading message
     * {math} replace wrong versiom
